1/1.11/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: write-read-svc
spec:
  type: ClusterIP
  selector:
    app: write-read
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: pong-svc
spec:
  type: ClusterIP
  selector:
    app: write-read
  ports:
    - protocol: TCP
      port: 2346
      targetPort: 3001
